# FASDashboard

./: .gitignore  README.md  docker-compose.yml
backend/: .env.template  Dockerfile  requirements.txt
backend/app/api/: logging.conf  server.py
backend/app/api/dependencies/: auth.py  database.py  facescans.py  landmarks.py  meanClassifications.py  patientnotes.py  patients.py  signatures.py
backend/app/api/routes/: PFL.py  __init__.py  ethnicities.py  facescans.py  landmarks.py  landmarksets.py  meanClassifications.py  patientnotes.py  patients.py  profiles.py  signatures.py  users.py
backend/app/core/: config.py  tasks.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: e93b5dabdefc_create_main_tables.py
backend/app/db/repositories/: ethnicities.py  facescans.py  landmarks.py  landmarksets.py  meanClassifications.py  patientnotes.py  patients.py  profiles.py  signatures.py  users.py
backend/app/models/: core.py  ethnicity.py  facescan.py  landmark.py  landmarkset.py  meanClassification.py  patient.py  patientnote.py  profile.py  signature.py  token.py  user.py
backend/app/services/: authentication.py
backend/doc/: db_pg_volume_backup.txt
landmarker/: Dockerfile  README.md  environment.yml  init.sh  requirements.txt  server.py
landmarker/FasdLandmarker/: CNN2dLandmarker.py  FaceRenderer.py  FasdLandmarker.py  GenericLandmarker.py  environment.yml  geometryUtils.py  server.py  utils.py
landmarker/FasdLandmarker/cnnPrediction/: build_model2D.py  config_dsnt2D.py  get_coordinates.py  hg_blocks.py
processor/: API_documentation.md  CMakeLists.txt  Dockerfile  PENDINGISSUES.md  README.md  launch  modelDB.json
processor/doc/: buildItInfo.txt  doc.txt  docHeatmapCompute.txt  faceScreenServerShortManual.odt  landmarksProcessing.txt
processor/serverConfig/: modelsDB-Draft.json
processor/src/: faceScreenProcessor.cpp  faceScreenProcessor.h  faceScreenServer.cpp  faceScreenServerDefinitions.h  faceScreeningObject.cpp  faceScreeningObject.h
processor/src/BellusUtils/: landmarkProcessing.cpp  landmarkProcessing.h
processor/src/PFLcomputation/: msPFLMeasure.cpp  msPFLMeasure.h
processor/src/heatmapProcessing/: msNormalisationTools.cpp  msNormalisationTools.h  vtkPCAModel.h  vtkSurfacePCA.cpp  vtkSurfacePCA.h
processor/src/mathUtils/: C2dVector.cpp  C2dVector.h  C3dVector.cpp  C3dVector.h  Point_3D.h  faceScreenMath.h  geometryFunctions.h
processor/src/subjectClassification/: CFloatMatrix.cpp  CFloatMatrix.h  classificationTools.cpp  classificationTools.h
processor/src/utils/tooJpeg/: toojpeg.cpp
processor/src/utils/zstr/: zstr.hpp
